test/variables/constants/assignConstError.good
assignConstError.chpl:2: error: can't re-assign a 'const' after its declaration
